--- a/src/page/product/seckill/antd.scss
+++ b/src/page/product/seckill/antd.scss
@@ -148,7 +148,7 @@ h1, h2, h3, h4, h5, h6 {
 
 p {
     margin-top: 0;
-    margin-bottom: 1em
+    //margin-bottom: 1em
 }
 
 abbr[title], abbr[data-original-title] {
